Updates from Overleaf

--- a/Apresentação/slides.tex
+++ b/Apresentação/slides.tex
@@ -638,7 +638,7 @@ Professor: Yuri Dumaresq Sobral}
             \right.
         \]
         %
-        cuja solução tal que 
+        cuja solução é tal que 
         \[
             \boxed{F'(\lambda) = \gamma w(b,\lambda) + \delta w'(b,\lambda);}
         \] \pause
